--- a/MoneySplitter.Win10/CustomControls/TransactionEventControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/TransactionEventControl.xaml
@@ -23,10 +23,9 @@
        
     </UserControl.Resources>
     
-        <Grid Margin="12,12,12,0">
-        <Border BorderThickness="0,0,0,1" 
-                BorderBrush="#cccccc">
-            <Grid Padding="0,0,0,12">
+        <Grid>
+        <Border>
+            <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
@@ -35,9 +34,9 @@
             </Grid.ColumnDefinitions>
 
                 <Border BorderThickness="1"
+                        Height="132"
                         BorderBrush="{StaticResource BorderImageBrush}">
                     <Rectangle Width="68" 
-                           Height="120"
                            HorizontalAlignment="Left">
                         <Rectangle.Fill>
                             <ImageBrush ImageSource="{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
