--- a/MoneySplitter.Win10/Views/HomeView.xaml
+++ b/MoneySplitter.Win10/Views/HomeView.xaml
@@ -1,24 +1,298 @@
-﻿<Page
-    x:Class="MoneySplitter.Win10.Views.HomeView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="MoneySplitter.Win10.Views.HomeView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:MoneySplitter.Win10.Views"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+      xmlns:viewmodels="using:MoneySplitter.Win10.ViewModels"
+      xmlns:converters="using:MoneySplitter.Win10.Converters"
+      mc:Ignorable="d">
+    <Page.Resources>
+        <converters:OppositeBoolToVisibilityConverter x:Key="OppositeBoolToVisibility"/>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Margin="24,10,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Style="{StaticResource TitleTextBlockStyle}"
-                               FontSize="28"
-                               Text="home"/>
+        <SolidColorBrush x:Key="White50OpacityBrush" Color="#88FBFBFB"/>
+        <SolidColorBrush x:Key="DarkColorBrush" Color="#242424"/>
+        <SolidColorBrush x:Key="DarkGrayColorBrush" Color="#464646"/>
+        <SolidColorBrush x:Key="GrayColorBrush" Color="#666666"/>
+        <SolidColorBrush x:Key="LightGrayColorBrush" Color="#AAAAAA"/>
+    </Page.Resources>
+    <ScrollViewer>
+        <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <Image HorizontalAlignment="Stretch"
+                   VerticalAlignment="Top"
+                   Stretch="UniformToFill"
+                   Height="340"
+                   Source="{x:Bind ViewModel.CurrentUserModel.BackgroundImageUrl, Mode=OneWay}"/>
+            <Grid HorizontalAlignment="Stretch"
+                  VerticalAlignment="Top"
+                  Height="360">
+                <Grid.Background>
+                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                        <GradientStop Color="#00FFFFFF" Offset="0.0" />
+                        <GradientStop Color="#FFFFFFFF" Offset="0.9" />
+                        <GradientStop Color="#FFFFFFFF" Offset="1" />
+                    </LinearGradientBrush>
+                </Grid.Background>
+            </Grid>
+            <StackPanel Background="{StaticResource White50OpacityBrush}"
+                        Visibility="{x:Bind ViewModel.IsLoading, Converter={StaticResource OppositeBoolToVisibility}, Mode=OneWay}"
+                        HorizontalAlignment="Stretch"
+                        Margin="0,180,0,0">
+                <Grid Margin="24,12,24,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Ellipse Width="68"
+                             Height="68">
+                        <Ellipse.Fill>
+                            <ImageBrush ImageSource="{x:Bind ViewModel.CurrentUserModel.ImageUrl, Mode=OneWay}"/>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <StackPanel Grid.Column="1"
+                                Margin="12,0,0,0">
+                        <TextBlock FontSize="18">
+                            <Run Text="{x:Bind ViewModel.CurrentUserModel.Name, Mode=OneWay}"/>
+                            <Run Text="{x:Bind ViewModel.CurrentUserModel.Surname, Mode=OneWay}"/>
+                        </TextBlock>
+                        <TextBlock Text="{x:Bind ViewModel.CurrentUserModel.Email, Mode=OneWay}"
+                                   FontSize="14"
+                                   Margin="0,2,0,0"
+                                   Foreground="{StaticResource DarkGrayColorBrush}"/>
+                        <StackPanel Orientation="Horizontal"
+                                    Margin="0,2,0,0">
+                            <FontIcon Glyph="&#xE716;"
+                                      Foreground="{StaticResource DarkGrayColorBrush}"
+                                      FontSize="14"/>
+                            <TextBlock Text="{x:Bind ViewModel.FriendsCount, Mode=OneWay}"
+                                       Margin="4,0,0,0"
+                                       FontSize="14"
+                                       Foreground="{StaticResource DarkGrayColorBrush}"/>
+                            <FontIcon Glyph="&#xE8CB;"
+                                      Margin="12,0,0,0"
+                                      Foreground="{StaticResource DarkGrayColorBrush}"
+                                      FontSize="12"/>
+                            <TextBlock Text="{x:Bind ViewModel.TransactionsCount, Mode=OneWay}"
+                                       Margin="4,0,0,0"
+                                       FontSize="14"
+                                       Foreground="{StaticResource DarkGrayColorBrush}"/>
+                        </StackPanel>
+                    </StackPanel>
+                    <Button Grid.Column="2"
+                            Padding="12,0,12,0"
+                            Background="Transparent"
+                            BorderThickness="1"
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Right"
+                            BorderBrush="{StaticResource GrayColorBrush}"
+                            Height="36">
+                        <StackPanel Orientation="Horizontal">
+                            <FontIcon Glyph="&#xE70F;"
+                                      Foreground="{StaticResource GrayColorBrush}"
+                                      FontSize="14"/>
+                            <TextBlock Text="EDIT PROFILE"
+                                       Margin="12,0,0,0"
+                                       FontSize="14"
+                                       Foreground="{StaticResource DarkGrayColorBrush}"/>
+                        </StackPanel>
+
+                    </Button>
+                </Grid>
+                <Grid Margin="24,24,24,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="24"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <FontIcon Glyph="&#xEC92;"
+                                      Foreground="{StaticResource DarkGrayColorBrush}"
+                                      FontSize="16"/>
+                            <TextBlock Text="Don't forget"
+                                       Margin="4,0,0,0"
+                                       FontSize="16"
+                                       Foreground="{StaticResource DarkColorBrush}"/>
+                        </StackPanel>
+                        <Button BorderThickness="0"
+                                Margin="0,8,0,0"
+                                Background="Transparent"
+                                Padding="0">
+                            <customControls:TransactionEventControl ViewModel="{x:Bind ViewModel.LatestTransaction, Mode=OneWay}"/>
+                        </Button>
+                    </StackPanel>
+                    <StackPanel Grid.Column="2">
+                        <StackPanel Orientation="Horizontal">
+                            <FontIcon Glyph="&#xE9D9;"
+                                      Foreground="{StaticResource DarkGrayColorBrush}"
+                                      FontSize="16"/>
+                            <TextBlock Text="Statistics"
+                                       Margin="4,0,0,0"
+                                       FontSize="16"
+                                       Foreground="{StaticResource DarkColorBrush}"/>
+                        </StackPanel>
+                        <StackPanel Margin="0,8,0,0">
+                            <StackPanel Orientation="Horizontal">
+                                <Grid Height="76"
+                                      Width="76"
+                                      Margin="0,0,24,0">
+                                    <Border Height="52"
+                                            VerticalAlignment="Top"
+                                            Width="52"
+                                            BorderThickness="1"
+                                            HorizontalAlignment="Center"
+                                            BorderBrush="{StaticResource DarkGrayColorBrush}"
+                                            CornerRadius="26">
+                                        <TextBlock Foreground="{StaticResource DarkGrayColorBrush}"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Center"
+                                                   Text="8$"/>
+                                    </Border>
+                                    <TextBlock Text="Total debt"
+                                               VerticalAlignment="Bottom"
+                                               HorizontalAlignment="Center"/>
+                                </Grid>
+                                <Grid Height="76"
+                                      Width="76">
+                                    <Border Height="52"
+                                            VerticalAlignment="Top"
+                                            Width="52"
+                                            BorderThickness="1"
+                                            HorizontalAlignment="Center"
+                                            BorderBrush="{StaticResource DarkGrayColorBrush}"
+                                            CornerRadius="26">
+                                        <TextBlock Foreground="{StaticResource DarkGrayColorBrush}"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Center"
+                                                   Text="1.2$"/>
+                                    </Border>
+                                    <TextBlock Text="Total owe"
+                                               VerticalAlignment="Bottom"
+                                               HorizontalAlignment="Center"/>
+                                </Grid>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal"
+                                        Margin="0,12,0,0">
+                                <Grid Height="76"
+                                      Width="76"
+                                      Margin="0,0,24,0">
+                                    <Border Height="52"
+                                            VerticalAlignment="Top"
+                                            Width="52"
+                                            BorderThickness="1"
+                                            HorizontalAlignment="Center"
+                                            BorderBrush="{StaticResource DarkGrayColorBrush}"
+                                            CornerRadius="26">
+                                        <TextBlock Foreground="{StaticResource DarkGrayColorBrush}"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Center"
+                                                   Text="12.5$"/>
+                                    </Border>
+                                    <TextBlock Text="In progress"
+                                               VerticalAlignment="Bottom"
+                                               HorizontalAlignment="Center"/>
+                                </Grid>
+                                <Grid Height="76"
+                                      Width="76">
+                                    <Border Height="52"
+                                            VerticalAlignment="Top"
+                                            Width="52"
+                                            BorderThickness="1"
+                                            HorizontalAlignment="Center"
+                                            BorderBrush="{StaticResource DarkGrayColorBrush}"
+                                            CornerRadius="26">
+                                        <TextBlock Foreground="{StaticResource DarkGrayColorBrush}"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Center"
+                                                   Text="0$"/>
+                                    </Border>
+                                    <TextBlock Text="Incoming"
+                                               VerticalAlignment="Bottom"
+                                               HorizontalAlignment="Center"/>
+                                </Grid>
+                            </StackPanel>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+                <StackPanel HorizontalAlignment="Stretch"
+                            Visibility="{x:Bind ViewModel.IsNotificationsSectionAvailable, Mode=OneWay}">
+                    <StackPanel Orientation="Horizontal"
+                                Margin="24,0,24,0">
+                        <FontIcon Glyph="&#xE946;"
+                                  Foreground="{StaticResource DarkGrayColorBrush}"
+                                  FontSize="16"/>
+                        <TextBlock Text="Notifications"
+                                   Margin="4,0,0,0"
+                                   FontSize="16"
+                                   Foreground="{StaticResource DarkColorBrush}"/>
+                    </StackPanel>
+                    <ListView ItemsSource="{x:Bind ViewModel.Notifications, Mode=OneWay}"
+                              SelectionMode="None"
+                              Margin="0,8,0,0">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Padding" Value="24,0,24,0"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="viewmodels:NotificationModel">
+                                <Grid Height="76">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Ellipse Width="60"
+                                             Height="60">
+                                        <Ellipse.Fill>
+                                            <ImageBrush ImageSource="{x:Bind ImageUrl, Mode=OneWay}"/>
+                                        </Ellipse.Fill>
+                                    </Ellipse>
+                                    <StackPanel Grid.Column="1"
+                                                VerticalAlignment="Center"
+                                                Margin="8,0,12,0">
+                                        <TextBlock Text="{x:Bind Title, Mode=OneWay}"
+                                                   FontSize="16"
+                                                   Foreground="{StaticResource DarkColorBrush}"/>
+                                        <TextBlock Text="{x:Bind Text, Mode=OneWay}"
+                                                   FontSize="14"
+                                                   Foreground="{StaticResource GrayColorBrush}"
+                                                   TextWrapping="Wrap"
+                                                   MaxLines="2"/>
+                                    </StackPanel>
+                                    <Button Grid.Column="2"
+                                            Padding="12,0,12,0"
+                                            Background="Transparent"
+                                            BorderThickness="1"
+                                            Click="OnRemoveButtonClick"
+                                            VerticalAlignment="Center"
+                                            BorderBrush="{StaticResource GrayColorBrush}"
+                                            Height="36">
+                                        <StackPanel Orientation="Horizontal">
+                                            <FontIcon Glyph="&#xE947;"
+                                                      Foreground="{StaticResource GrayColorBrush}"
+                                                      FontSize="14"/>
+                                            <TextBlock Text="REMOVE"
+                                                       Margin="12,0,0,0"
+                                                       FontSize="14"
+                                                       Foreground="{StaticResource DarkGrayColorBrush}"/>
+                                        </StackPanel>
+                                    </Button>
+                                    <Border BorderBrush="{StaticResource LightGrayColorBrush}"
+                                            HorizontalAlignment="Stretch"
+                                            BorderThickness="0,0,0,1"
+                                            Grid.ColumnSpan="3"
+                                            VerticalAlignment="Stretch"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </StackPanel>
             </StackPanel>
+            <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
         </Grid>
-        <TextBlock Text="Hello world" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-    </Grid>
+    </ScrollViewer>
 </Page>
