--- a/MoneySplitter.Win10/Views/LoginView.xaml
+++ b/MoneySplitter.Win10/Views/LoginView.xaml
@@ -1,13 +1,16 @@
-﻿<Page
-    x:Class="MoneySplitter.Win10.Views.LoginView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
-    mc:Ignorable="d">
-
+﻿<Page   x:Class="MoneySplitter.Win10.Views.LoginView"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="using:MoneySplitter.Win10.Views"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+        xmlns:extensions="using:MoneySplitter.Win10.Extensions"
+        mc:Ignorable="d">
+    
+    <Page.Resources>
+        <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
+    </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
         <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
@@ -18,17 +21,18 @@
             
             <TextBox PlaceholderText="Enter email"
                      Text="{x:Bind ViewModel.Email, Mode=TwoWay }"
-                     Header="Email"/>
+                     Style="{StaticResource DefaultTextBoxStyle}"/>
 
             <PasswordBox PlaceholderText="Enter Password"
-                             Password="{x:Bind ViewModel.Password, Mode=TwoWay}"
-                             Header="Password"/>
-                
-            <Button Content="Login"
+                         Password="{x:Bind ViewModel.Password, Mode=TwoWay}"
+                         Style="{StaticResource DefaultPasswordBoxStyle}"/>
+
+            <Button extensions:XamlElementExtensions.Resource="LOGIN_BUTTON_CONTENT"
                     Click="OnLoginClick"
                     Margin="5"/>
-            <HyperlinkButton Content="Register"
-                             Click="OnRegistredClick"/>
+            
+            <Button extensions:XamlElementExtensions.Resource="REGISTER_BUTTON_CONTENT"
+                    Click="OnRegistredClick"/>
         </StackPanel>
 
         <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
