--- a/MoneySplitter.Win10/Views/RegisterView.xaml
+++ b/MoneySplitter.Win10/Views/RegisterView.xaml
@@ -6,47 +6,52 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+    xmlns:extensions="using:MoneySplitter.Win10.Extensions"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
+    </Page.Resources>
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel VerticalAlignment="Center"
                     HorizontalAlignment="Center"
                     Padding="5">
 
-            <TextBox PlaceholderText="Enter email"
+            <TextBox extensions:XamlElementExtensions.Resource="EMAIL_PLACEHOLDER_TEXT"
                      Text="{x:Bind ViewModel.RegisterModel.Email, Mode=TwoWay}"
-                     Header="Email"/>
+                     Style="{StaticResource DefaultTextBoxStyle}"/>
 
-            <PasswordBox PlaceholderText="Enter Password"
+
+            <PasswordBox extensions:XamlElementExtensions.Resource="PASSWORD_PLACEHOLDER_TEXT"
                          Password="{x:Bind ViewModel.RegisterModel.Password, Mode=TwoWay}"
-                         Header="Password"/>
-            
-            <PasswordBox PlaceholderText="Confirm password"
+                         Style="{StaticResource DefaultPasswordBoxStyle}"/>
+
+            <PasswordBox extensions:XamlElementExtensions.Resource="CONFIRM_PASSWORD_PLACEHOLDER_TEXT"
                          Password="{x:Bind ViewModel.ConfirmPassword, Mode=TwoWay}"
-                         Header="Confirm password"/>
+                         Style="{StaticResource DefaultPasswordBoxStyle}"/>
 
-            <TextBox PlaceholderText="Enter name"
+            <TextBox extensions:XamlElementExtensions.Resource="NAME_PLACEHOLDER_TEXT"
                      Text="{x:Bind ViewModel.RegisterModel.Name, Mode=TwoWay}"
-                     Header="Name"/>
+                     Style="{StaticResource DefaultTextBoxStyle}"/>
 
-            <TextBox PlaceholderText="Enter surname"
+            <TextBox extensions:XamlElementExtensions.Resource="SURNAME_PLACEHOLDER_TEXT"
                      Text="{x:Bind ViewModel.RegisterModel.Surname, Mode=TwoWay}"
-                     Header="Surname"/>
+                     Style="{StaticResource DefaultTextBoxStyle}"/>
 
-            <TextBox PlaceholderText="Enter credit card number"
+            <TextBox extensions:XamlElementExtensions.Resource="NUMBER_CREDIT_CARD_PLACEHOLDER_TEXT"
                      Text="{x:Bind ViewModel.RegisterModel.CreditCardNumber, Mode=TwoWay}"
-                     Header="Number credit card"/>
+                     Style="{StaticResource DefaultTextBoxStyle}"/>
 
-            <TextBox PlaceholderText="Enter phone number"
+            <TextBox extensions:XamlElementExtensions.Resource="NUMBER_PHONE_PLACEHOLDER_TEXT"
                      Text="{x:Bind ViewModel.RegisterModel.PhoneNumber, Mode=TwoWay}"
-                     Header="Phone number"/>
+                     Style="{StaticResource DefaultTextBoxStyle}"/>
 
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                 <TextBlock Text="{x:Bind ViewModel.LabelForAvatarImage, Mode=OneWay}"
                            Margin="0,0,5,0"
                            VerticalAlignment="Center"/>
-                
-                <Button Content="browse" 
+
+                <Button extensions:XamlElementExtensions.Resource="BROWSE_BUTTON_CONTENT"
                         Click="OnBrowseAvatarImage"
                         HorizontalAlignment="Right"/>
             </StackPanel>
@@ -55,12 +60,12 @@
                 <TextBlock Text="{x:Bind ViewModel.LabelForBackgroundImage, Mode=OneWay}"
                            Margin="0,0,5,0"
                            VerticalAlignment="Center"/>
-                <Button Content="browse" 
+                <Button extensions:XamlElementExtensions.Resource="BROWSE_BUTTON_CONTENT"
                         Click="OnBrowseBackgroundImage"
                         HorizontalAlignment="Right"/>
             </StackPanel>
 
-            <Button Content="Registred"
+            <Button extensions:XamlElementExtensions.Resource="REGISTER_BUTTON_CONTENT"
                     Click="OnRegisterButtonClick"
                     Margin="5"
                     HorizontalAlignment="Center"/>
